# Advanced-Engineering-Computation

./: CMakeLists.txt  README.md
course_files/.svn/: wc.db
course_files/binaryStlViewer/: main.cpp
course_files/bintreevis/: main.cpp
course_files/course_notes/LectureNote01/: Lecture01.pptx
course_files/course_notes/LectureNote02/: Lecture02.pptx
course_files/course_notes/LectureNote03/: Lecture03.pptx
course_files/course_notes/LectureNote06/: Lecture06.pptx
course_files/lectureSampleCode/05-bitmap/: simplebitmap.cpp
course_files/utility/: hashbase.h  hashtable.h  polygonalmesh.h  polygonalmeshio.cpp
public/.svn/: wc.db
public/tests/batch/: CMakeLists.txt
public/tests/batch/batch_test_template/: CMakeLists.txt  test.cpp
public/tests/batch/ysbitmap/cutout/: test.cpp
public/tests/batch/ysbitmap/pngEncoder/: CMakeLists.txt
public/tests/batch/ysclass/DDA/: CMakeLists.txt
public/tests/batch/ysclass/YsCheckInsidePolygon2/: CMakeLists.txt  test.cpp
public/tests/batch/ysclass/YsKdTreeNearestPoint/: CMakeLists.txt
public/tests/batch/ysclass/YsMatrix/: test.cpp
public/tests/batch/ysclass/YsMatrix4x4/: test.cpp
public/tests/batch/ysclass/YsRelDir/: CMakeLists.txt  test.cpp
public/tests/batch/ysclass/YsStringParser/: CMakeLists.txt  test.cpp
public/tests/batch/ysclass/YsSword/: test.cpp
public/tests/batch/ysclass/YsVec2YsVec3YsAtt3/: CMakeLists.txt
public/tests/batch/ysgebl/kernel/fileio/: CMakeLists.txt
public/tests/batch/ysgebl/kernel/search/: test.cpp
ruihanf/.svn/: wc.db
ruihanf/ps4/ps4_2/: main.cpp  (+1 more)
ruihanf/utility/: hashset.h
(+198 files in other folders)
